# clawbrain

./: CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  __init__.py  clawbrain.py  install.sh  pyproject.toml  remote-install.sh
brain/: README.md  __init__.py  brain_v3.py  clawbrain.py
extensions/clawbrain/: PLUGIN.md  README.md  handler.ts  package.json  tsconfig.json
extensions/clawbrain/scripts/: brain_bridge.py
extensions/clawbrain/templates/: BOOT.md  MEMORY.md
hooks/clawbrain-startup/: handler.js
